# robot_sense

./: README.md  main.py  package.xml  requirements.txt  ros_publisher.py  setup.py
interl_proj/: main.py  main2.py  main3.py
launch/: rsp.launch.py
scripts/: build.sh  install_dependencies.ps1  start_recording.ps1
sense/: d435i_reader.py
src/data_recorder/: package.xml
src/data_recorder/data_recorder/: recorder_node.py
src/realsense_driver/: package.xml  setup.py
src/realsense_driver/config/: camera_params.yaml
src/realsense_driver/launch/: camera_record.launch.py
src/realsense_driver/realsense_driver/: realsense_node.py
store/: bag_storer.py
